@@ -1,3 +1,8 @@
+2006-06-16  Mark Mitchell  <mark@codesourcery.com>
+ 
+	PR c++/28016
+	* g++.dg/template/static26.C: New test.
+
 2006-06-27  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR fortran/19310
